<resources>
    <string name="app_name"></string>
    <string name="Menu">Menu</string>
    <string name="Budget">Budget</string>

    <string name="Food">Food</string>
    <string name="Other">Other</string>
    <string name="Gas">Gas</string>
    <string name="Bill">Bill</string>
    <string name="Social">Social</string>
    <string name="Clothes">Clothes</string>
    <string name="homeBudget">$0.00</string>
    <string name="expenseTot">Add Expense</string>
    <string name="homeCat">Categories</string>
    <string name="submit">SUBMIT</string>
    <string name="Activity">Activity</string>
    <string name="totalFood">Total Food Expenses:</string>
    <string name="totalBill">Total Bill Expenses:</string>
    <string name="totalAct">Total Activity Expenses:</string>
    <string name="totalGas">Total Gas Expenses</string>
    <string name="totalClothes">Total Clothes Expenses:</string>
    <string name="totalOther">Total Other Expenses:</string>
    <string name="remainingExp">Remaining Expenses:</string>
    <string name="expFeed">Expenses:</string>
    <string name="viewFeed">Press To View Feed</string>
    <string name="expButton">Expenses</string>
    <string name="expType">Exp Type</string>
    <string name="expAmt">Expense Amount</string>
    <string name="date">Date</string>

    <string name="viewData">viewData</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>


    <!-- Menu setting budget-->
    <string name="totalBudget">Total Budget:</string>
    <string name="foodBudget">Food Budget: $</string>
    <string name="billBudget">Bill Budget: $</string>
    <string name="actBudget">Activities Budget:</string>
    <string name="gasBudget">Gas Budget:</string>
    <string name="clothesBudget">Clothes Budget:</string>
    <string name="otherBudget">Other Budget:</string>
    <string name="totalBudgetValue">$0.00</string>
    <string name="foodBudgetValue">$0.00</string>
    <string name="billBudgetValue">$0.00</string>
    <string name="actBudgetValue">$0.00</string>
    <string name="gasBudgetValue">$0.00</string>
    <string name="clothesBudgetValue">$0.00</string>
    <string name="otherBudgetValue">$0.00</string>


    <string-array name="cat_array">
        <item>Food</item>
        <item>Gas</item>
        <item>Social</item>
        <item>Rent</item>
        <item>Clothes</item>
        <item>Tolls</item>
        <item>Clothes</item>
    </string-array>
</resources>
