<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Feed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <TextView
        android:id="@+id/Type"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="66.6"
        android:gravity="center"
        android:text="@string/Food"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="33.3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Date"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/date"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/ExpAmt"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/Date"
            android:gravity="center"
            android:text="@string/expAmt"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>