<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/veryLightGray"
    tools:context="com.example.markxsimu.budgetxp.FoodButtonActivity">

    <TextView
        android:id="@+id/FoodBudgetTitle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="156dp"
        android:layout_marginTop="48dp"
        android:text="Food"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalFood"
        android:layout_width="180dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:text="@string/totalFood"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/FoodBudget"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/TotalFoodAmount"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="76dp"
        android:text="$0.00"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/totalFood"
        app:layout_constraintTop_toBottomOf="@+id/FoodBudgetTitle" />

    <TextView
        android:id="@+id/FoodBudget"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/foodBudget"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/FoodBudgetTitle"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/FoodBudgetAmt"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="40dp"
        android:text="$0.00"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/FoodBudget"
        app:layout_constraintTop_toBottomOf="@+id/FoodBudgetTitle" />

    <TextView
        android:id="@+id/RemainingFood"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/remainingExp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/totalFood"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/RemainFoodAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        android:layout_marginTop="8dp"
        android:text="$0.00"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/RemainingFood"
        app:layout_constraintTop_toBottomOf="@+id/TotalFoodAmount" />

    <TextView
        android:id="@+id/ExpenseFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/expFeed"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/RemainingFood"
        tools:layout_editor_absoluteX="8dp" />

    <ListView
        android:id="@+id/Feed"
        android:layout_width="368dp"
        android:layout_height="275dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/darkGray"
        android:entries="@drawable/dark_g_rectangle"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExpenseFeed"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
